fix: config